--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Curriculum Vitae</title>
+    <title>Portafolio</title>
     <link href="Actividad 3-3-1.css" rel="stylesheet" type="text/css">
 </head>
 
